# dell-nvidia-hackathon

./: .gitignore  FactoryMind.md  how-to-run.md  overview.md  roles.md
factorymind/: CODEOWNERS.md  README.md  README_SIM.md  pyproject.toml  requirements.txt  run_nemotron_mcp.py  run_ollama_loop.py
factorymind/factorymind/: __init__.py
factorymind/factorymind.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
factorymind/factorymind/agent/: SOUL.md  __init__.py  client.py  loop.py  nemoclaw.yaml  openclaw.json  openshell-policy.yaml  overviewarchitectureagent.md  policy-sim-mcp.yaml  schemas.py  skills.yaml
factorymind/factorymind/agent/schemas/: c1_plan.yaml  c2_state.yaml  latency_entry.yaml  latency_report.yaml  loop_stats.yaml  reset_result.yaml
factorymind/factorymind/demo/: README.md  __init__.py  gen_mock_telemetry.py
factorymind/factorymind/demo/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
factorymind/factorymind/demo/static/: ar_run.jsonl  diffusion_run.jsonl  index.html  sample_telemetry.jsonl
factorymind/factorymind/sim/: __init__.py  mcp_server.py  mock_cell.py  oracle.py  smoke_test.py
factorymind/factorymind/sim/a/: GB10_CHECKLIST.md  README.md  ROLE_A_SIMULATION_ENGINEER.md  __init__.py  build_cell.py  cell.py  config.py  conveyor.py  env_factory.py  frame_export.py  live_driver.py  mcp_server.py  mujoco_cell.py  oracle.py  part_catalog.py  pose_lookup.py  render.py  render_frame.py  run_all.py  run_demo.py  run_gb10_check.py  run_live_demo.py  run_oracle_replay.py  state.py  (+8 more)
(+33 files in other folders)
