[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factorymind"
version = "0.1.0"
description = "FactoryMind — local multi-robot assembly cell controller"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3",
    "mcp>=1.2,<2",
]

[project.scripts]
factorymind-sim-mcp = "factorymind.sim.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["factorymind*"]
